--- a/mowa.html
+++ b/mowa.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nasluchiwanie cyfr</title>
+<title>Nasluchiwanie cyfr - ciagle</title>
 <style>
 body { font-family: Arial; padding: 20px; }
 button { font-size: 18px; padding: 10px 20px; margin-top: 10px; }
@@ -13,9 +13,9 @@ th, td { border: 1px solid #000; padding: 10px; font-size: 22px; text-align: cen
 </head>
 <body>
 
-<h2>Nasluchiwanie cyfr</h2>
-<button id="start">🎙 Rozpocznij nagrywanie</button>
-<p id="info">Kliknij przycisk, aby nagrać mowę.</p>
+<h2>Nasluchiwanie cyfr - ciagle</h2>
+<button id="start">🎙 Start / Stop</button>
+<p id="info">Kliknij przycisk, aby rozpocząć nasłuchiwanie.</p>
 
 <table id="table">
 <tr><th>#</th><th>Numer</th></tr>
@@ -29,32 +29,56 @@ const info = document.getElementById("info");
 
 const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 if(!SpeechRecognition){
-  info.textContent = "Twoja przeglądarka nie wspiera rozpoznawania mowy. Użyj Safari na iPhone lub Chrome/Safari na komputerze.";
+    info.textContent = "Twoja przeglądarka nie wspiera rozpoznawania mowy. Użyj Safari na iPhone lub Chrome/Safari na komputerze.";
 } else {
-  const recognition = new SpeechRecognition();
-  recognition.lang = "pl-PL";
-  recognition.continuous = false;
-  recognition.interimResults = false;
+    const recognition = new SpeechRecognition();
+    recognition.lang = "pl-PL";
+    recognition.continuous = true;  // <- ciagłe nasluchiwanie
+    recognition.interimResults = false;
 
-  document.getElementById("start").onclick = () => recognition.start();
+    let listening = false;
 
-  recognition.onstart = () => info.textContent = "Nagrywanie… mów cyfry!";
-  recognition.onend = () => info.textContent = "Kliknij przycisk, aby nagrać ponownie.";
+    document.getElementById("start").onclick = () => {
+        if(!listening){
+            recognition.start();
+            listening = true;
+            info.textContent = "Nagrywanie… mow cyfry!";
+            console.log("Rozpoczęto nasłuchiwanie");
+        } else {
+            recognition.stop();
+            listening = false;
+            info.textContent = "Nasłuchiwanie zatrzymane.";
+            console.log("Zatrzymano nasłuchiwanie");
+        }
+    };
 
-  recognition.onresult = (event) => {
-    const text = event.results[0][0].transcript.toLowerCase();
-    let digits = [];
-    text.split(/\s+/).forEach(word => { if(map[word]) digits.push(map[word]); });
-    digits = digits.slice(0,4);
-    while(digits.length < 4) digits.push("-");
-    const row = table.insertRow();
-    row.insertCell().textContent = counter++;
-    row.insertCell().textContent = digits.join("");
-  };
+    recognition.onresult = (event) => {
+        const text = event.results[event.results.length - 1][0].transcript.toLowerCase();
+        console.log("Rozpoznano:", text);
+        let digits = [];
+        text.split(/\s+/).forEach(word => { if(map[word]) digits.push(map[word]); });
+        digits = digits.slice(0,4);
+        while(digits.length < 4) digits.push("-");
+        const row = table.insertRow();
+        row.insertCell().textContent = counter++;
+        row.insertCell().textContent = digits.join("");
+        console.log("Dodano wiersz:", digits.join(""));
+    };
 
-  recognition.onerror = (e) => info.textContent = "Błąd: " + e.error;
+    recognition.onerror = (e) => {
+        console.log("Błąd rozpoznawania mowy:", e.error);
+        info.textContent = "Błąd: " + e.error;
+    };
+
+    recognition.onend = () => {
+        console.log("Recognition ended");
+        if(listening){
+            console.log("Restartujemy nasłuchiwanie");
+            recognition.start();  // <- kontynuacja nasłuchiwania automatycznie
+        }
+    };
 }
 </script>
 
-</body>
+</body>gggggffff
 </html>
