--- a/mowa.html
+++ b/mowa.html
@@ -16,7 +16,7 @@ th, td { border: 1px solid #000; padding: 10px; font-size: 22px; text-align: cen
 <h2>Nasluchiwanie cyfr - ciagle</h2>
 <button id="start">🎙 Start / Stop</button>
 <p id="info">Kliknij przycisk, aby rozpocząć nasłuchiwanie.</p>
-
+jijhkjhjhk
 <table id="table">
 <tr><th>#</th><th>Numer</th></tr>
 </table>
@@ -82,3 +82,4 @@ if(!SpeechRecognition){
 
 </body>gggggffff
 </html>
+
