--- a/mowa.html
+++ b/mowa.html
@@ -3,95 +3,149 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nasluchiwanie cyfr - debug</title>
+<title>Nasluchiwanie cyfr</title>
+
 <style>
-body { font-family: Arial; padding: 20px; }
-button { font-size: 18px; padding: 10px 20px; margin-top: 10px; }
-table { border-collapse: collapse; margin-top: 20px; width: 100%; }
-th, td { border: 1px solid #000; padding: 10px; font-size: 22px; text-align: center; }
+body {
+  font-family: Arial;
+  padding: 20px;
+  user-select: none;
+}
+
+button {
+  font-size: 18px;
+  padding: 12px 20px;
+  margin-top: 10px;
+  z-index: 1001;
+  position: relative;
+}
+
+table {
+  border-collapse: collapse;
+  margin-top: 20px;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid #000;
+  padding: 10px;
+  font-size: 22px;
+  text-align: center;
+}
+
+/* BLOKADA EKRANU */
+#lock {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  z-index: 1000;
+  touch-action: none;
+}
+#lock span {
+  color: #fff;
+  font-size: 20px;
+  position: absolute;
+  bottom: 30px;
+  width: 100%;
+  text-align: center;
+}
 </style>
 </head>
+
 <body>
 
-<h2>Nasluchiwanie cyfr - debug</h2>
-<button id="start">🎙 Start / Stop</button>
-<p id="info">Kliknij przycisk, aby rozpocząć nasłuchiwanie.</p>
+<h2>Nasluchiwanie cyfr</h2>
+
+<button id="toggle">🎙 START</button>
+<button id="unlock" style="display:none;">⛔ STOP</button>
+
+<div id="lock">
+  <span>Ekran zablokowany – nagrywanie aktywne</span>
+</div>
 
 <table id="table">
 <tr><th>#</th><th>Numer</th></tr>
 </table>
 
 <script>
-const map = { zero:"0", jeden:"1", dwa:"2", trzy:"3", cztery:"4", piec:"5", szesc:"6", siedem:"7", osiem:"8", dziewiec:"9" };
 let counter = 1;
+let listening = false;
+let wakeLock = null;
+
 const table = document.getElementById("table");
-const info = document.getElementById("info");
+const toggleBtn = document.getElementById("toggle");
+const unlockBtn = document.getElementById("unlock");
+const lockDiv = document.getElementById("lock");
 
 const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-if(!SpeechRecognition){
-    info.textContent = "Twoja przeglądarka nie wspiera rozpoznawania mowy. Użyj Safari na iPhone lub Chrome/Safari na komputerze.";
-} else {
-    const recognition = new SpeechRecognition();
-    recognition.lang = "pl-PL";
-    recognition.continuous = true;
-    recognition.interimResults = false;
+const recognition = new SpeechRecognition();
 
-    let listening = false;
+recognition.lang = "pl-PL";
+recognition.continuous = true;
+recognition.interimResults = false;
 
-    document.getElementById("start").onclick = () => {
-        if(!listening){
-            recognition.start();
-            listening = true;
-            info.textContent = "Nagrywanie… mów cyfry!";
-            console.log("Rozpoczęto nasłuchiwanie");
-        } else {
-            recognition.stop();
-            listening = false;
-            info.textContent = "Nasłuchiwanie zatrzymane.";
-            console.log("Zatrzymano nasłuchiwanie");
-        }
-    };
-
-    recognition.onresult = (event) => {
-        const resultIndex = event.resultIndex;
-        const transcript = event.results[resultIndex][0].transcript.toLowerCase().trim();
-        console.log("Rozpoznano tekst:", transcript);
-
-        let digits = [];
-        transcript.split(/\s+/).forEach(word => {
-            if(map[word]) {
-                digits.push(map[word]);
-                console.log("Mapowanie:", word, "->", map[word]);
-            } else {
-                console.log("Nieznane słowo:", word);
-            }
-        });
-
-        if(digits.length === 0){
-            console.log("Nie znaleziono żadnej cyfry w rozpoznanym tekście");
-        }
-
-        digits = digits.slice(0,4);
-        while(digits.length < 4) digits.push("-");
-        const row = table.insertRow();
-        row.insertCell().textContent = counter++;
-        row.insertCell().textContent = digits.join("");
-        console.log("Dodano wiersz:", digits.join(""));
-    };
-
-    recognition.onerror = (e) => {
-        console.log("Błąd rozpoznawania mowy:", e.error);
-        info.textContent = "Błąd: " + e.error;
-    };
-
-    recognition.onend = () => {
-        console.log("Recognition ended");
-        if(listening){
-            console.log("Restartujemy nasłuchiwanie");
-            recognition.start();
-        }
-    };
+/* WAKE LOCK */
+async function enableWakeLock(){
+  try {
+    wakeLock = await navigator.wakeLock.request("screen");
+    console.log("Wake Lock AKTYWNY");
+  } catch(e){
+    console.log("Wake Lock error:", e);
+  }
 }
+
+function disableWakeLock(){
+  if(wakeLock){
+    wakeLock.release();
+    wakeLock = null;
+    console.log("Wake Lock OFF");
+  }
+}
+
+/* START / STOP */
+toggleBtn.onclick = async () => {
+  if(!listening){
+    recognition.start();
+    listening = true;
+    toggleBtn.style.display = "none";
+    unlockBtn.style.display = "inline-block";
+    lockDiv.style.display = "block";
+    await enableWakeLock();
+    console.log("Nasluchiwanie START");
+  }
+};
+
+unlockBtn.onclick = () => {
+  recognition.stop();
+  listening = false;
+  toggleBtn.style.display = "inline-block";
+  unlockBtn.style.display = "none";
+  lockDiv.style.display = "none";
+  disableWakeLock();
+  console.log("Nasluchiwanie STOP");
+};
+
+recognition.onresult = (event) => {
+  const text = event.results[event.resultIndex][0].transcript;
+  console.log("Rozpoznano:", text);
+
+  const digits = text.replace(/\D/g, '').split('');
+
+  for(let i=0;i<digits.length;i+=4){
+    const chunk = digits.slice(i,i+4);
+    while(chunk.length < 4) chunk.push("-");
+    const row = table.insertRow();
+    row.insertCell().textContent = counter++;
+    row.insertCell().textContent = chunk.join("");
+  }
+};
+
+recognition.onend = () => {
+  if(listening){
+    recognition.start();
+  }
+};
 </script>
 
 </body>
