Refactor mowa.html for real-time digit recognition
Updated the HTML structure and JavaScript functionality for real-time digit recognition. Added visual feedback for new rows in the table.

--- a/mowa.html
+++ b/mowa.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nasluchiwanie cyfr</title>
-
+<title>Nasluchiwanie cyfr - realtime</title>
 <style>
 body { font-family: Arial; padding: 20px; }
 button { font-size: 18px; padding: 12px 20px; margin-top: 10px; z-index:1001; position:relative; }
@@ -13,11 +12,12 @@ th, td { border: 1px solid #000; padding: 10px; font-size: 22px; text-align: cen
 #lock { display:none; position: fixed; inset:0; background: rgba(0,0,0,0.6); z-index:1000; touch-action:none; }
 #lock span { color:#fff; font-size:20px; position:absolute; bottom:30px; width:100%; text-align:center; }
 #info { font-size: 18px; margin-top:10px; color: #222; }
+.new-row { background: #cfc; transition: background 1s; }
 </style>
 </head>
 <body>
 
-<h2>Nasluchiwanie cyfr</h2>
+<h2>Nasluchiwanie cyfr - realtime</h2>
 <button id="toggle">🎙 START</button>
 <button id="unlock" style="display:none;">⛔ STOP</button>
 <p id="info">Kliknij przycisk, aby rozpocząć nasłuchiwanie.</p>
@@ -34,6 +34,7 @@ th, td { border: 1px solid #000; padding: 10px; font-size: 22px; text-align: cen
 let counter = 1;
 let listening = false;
 let wakeLock = null;
+let allDigits = [];
 
 const table = document.getElementById("table");
 const toggleBtn = document.getElementById("toggle");
@@ -42,77 +43,67 @@ const lockDiv = document.getElementById("lock");
 const info = document.getElementById("info");
 
 const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-const recognition = new SpeechRecognition();
+if(!SpeechRecognition){
+    info.textContent = "Twoja przeglądarka nie wspiera rozpoznawania mowy.";
+} else {
+    const recognition = new SpeechRecognition();
+    recognition.lang = "pl-PL";
+    recognition.continuous = true;
+    recognition.interimResults = true;
 
-recognition.lang = "pl-PL";
-recognition.continuous = true;
-recognition.interimResults = false;
+    async function enableWakeLock(){
+      try { wakeLock = await navigator.wakeLock.request("screen"); } catch(e){ console.log("WakeLock error", e); }
+    }
+    function disableWakeLock(){ if(wakeLock){ wakeLock.release(); wakeLock=null; } }
 
-/* WAKE LOCK */
-async function enableWakeLock(){
-  try { wakeLock = await navigator.wakeLock.request("screen"); console.log("Wake Lock AKTYWNY"); }
-  catch(e){ console.log("Wake Lock error:", e); }
+    toggleBtn.onclick = async () => {
+      if(!listening){
+        recognition.start();
+        listening = true;
+        toggleBtn.style.display = "none";
+        unlockBtn.style.display = "inline-block";
+        lockDiv.style.display = "block";
+        await enableWakeLock();
+        info.textContent = "Nagrywanie…";
+      }
+    };
+
+    unlockBtn.onclick = () => {
+      recognition.stop();
+      listening = false;
+      toggleBtn.style.display = "inline-block";
+      unlockBtn.style.display = "none";
+      lockDiv.style.display = "none";
+      disableWakeLock();
+      info.textContent = "Nagrywanie zatrzymane.";
+    };
+
+    function addDigitsToTable(digits){
+      for(let i=0;i<digits.length;i+=4){
+        const chunk = digits.slice(i,i+4);
+        while(chunk.length<4) chunk.push("-");
+        const row = table.insertRow();
+        row.insertCell().textContent = counter++;
+        row.insertCell().textContent = chunk.join("");
+        row.classList.add("new-row");
+        setTimeout(()=>row.classList.remove("new-row"),1000);
+        info.textContent = "Zapisano numer: " + chunk.join("");
+      }
+    }
+
+    recognition.onresult = (event) => {
+      const result = event.results[event.resultIndex][0].transcript;
+      const digits = result.replace(/\D/g,'').split('');
+      if(digits.length>0){
+        addDigitsToTable(digits);
+      }
+    };
+
+    recognition.onerror = (e) => { info.textContent="Błąd: "+e.error; console.log("Błąd:", e.error); };
+    recognition.onend = () => { if(listening) recognition.start(); };
 }
-
-function disableWakeLock(){
-  if(wakeLock){ wakeLock.release(); wakeLock=null; console.log("Wake Lock OFF"); }
-}
-
-/* START / STOP */
-toggleBtn.onclick = async () => {
-  if(!listening){
-    recognition.start();
-    listening = true;
-    toggleBtn.style.display = "none";
-    unlockBtn.style.display = "inline-block";
-    lockDiv.style.display = "block";
-    await enableWakeLock();
-    console.log("Nasluchiwanie START");
-  }
-};
-
-unlockBtn.onclick = () => {
-  recognition.stop();
-  listening = false;
-  toggleBtn.style.display = "inline-block";
-  unlockBtn.style.display = "none";
-  lockDiv.style.display = "none";
-  disableWakeLock();
-  info.textContent = "Nasłuchiwanie zatrzymane.";
-  console.log("Nasluchiwanie STOP");
-};
-
-/* ROZPOZNAWANIE I DOPISYWANIE */
-recognition.onresult = (event) => {
-  const text = event.results[event.resultIndex][0].transcript;
-  console.log("Rozpoznano:", text);
-
-  // wyciągamy wszystkie cyfry
-  const digits = text.replace(/\D/g,'').split('');
-  console.log("Wyciągnięte cyfry:", digits);
-
-  if(digits.length === 0){
-    info.textContent = "Brak cyfr – powtórz nagranie!";
-    return;
-  }
-
-  // dodajemy wiersze po 4 cyfry
-  for(let i=0;i<digits.length;i+=4){
-    const chunk = digits.slice(i,i+4);
-    while(chunk.length<4) chunk.push("-");
-    const row = table.insertRow();
-    row.insertCell().textContent = counter++;
-    row.insertCell().textContent = chunk.join("");
-    console.log("Dodano wiersz:", chunk.join(""));
-    info.textContent = "Zapisano numer: " + chunk.join("");
-  }
-};
-
-/* błędy i restart */
-recognition.onerror = (e) => { console.log("Błąd rozpoznawania:", e.error); info.textContent="Błąd: "+e.error; };
-recognition.onend = () => { if(listening){ console.log("Restart nasłuchiwania"); recognition.start(); } };
 </script>
 
 </body>
 </html>
-7878
+yyyyyyy
