--- a/mowa.html
+++ b/mowa.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nasluchiwanie cyfr - uniwersalnie</title>
+<title>Nasłuchiwanie cyfr po 2</title>
 <style>
 body{font-family:Arial;padding:20px;}
 button{font-size:18px;padding:12px 20px;margin-top:10px;z-index:1001;position:relative;}
@@ -17,7 +17,7 @@ th,td{border:1px solid #000;padding:10px;font-size:22px;text-align:center;}
 </head>
 <body>
 
-<h2>Nasluchiwanie cyfr uniwersalnie</h2>
+<h2>Nasłuchiwanie cyfr po 2</h2>
 <button id="toggle">🎙 START</button>
 <button id="unlock" style="display:none;">⛔ STOP</button>
 <p id="info">Kliknij START aby rozpocząć nagrywanie.</p>
@@ -39,73 +39,82 @@ const lockDiv=document.getElementById("lock");
 const info=document.getElementById("info");
 
 const SpeechRecognition=window.SpeechRecognition||window.webkitSpeechRecognition;
-if(!SpeechRecognition){info.textContent="Twoja przeglądarka nie wspiera rozpoznawania mowy.";}
-else{
-  const recognition=new SpeechRecognition();
-  recognition.lang="pl-PL";
-  recognition.continuous=false; // krótkie frazy, mobilnie działa lepiej
-  recognition.interimResults=false;
+if(!SpeechRecognition){
+    info.textContent="Twoja przeglądarka nie wspiera rozpoznawania mowy.";
+} else {
+    const recognition=new SpeechRecognition();
+    recognition.lang="pl-PL";
+    recognition.interimResults=false;
 
-  async function enableWakeLock(){try{wakeLock=await navigator.wakeLock.request("screen");}catch(e){console.log("WakeLock error",e);}}
-  function disableWakeLock(){if(wakeLock){wakeLock.release();wakeLock=null;}}
+    // Desktop: continuous = true, Mobilnie: false
+    const isMobile=/iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+    recognition.continuous=!isMobile;
 
-  toggleBtn.onclick=async ()=>{
-    if(!listening){
-      startRecognition();
-      listening=true;
-      toggleBtn.style.display="none";
-      unlockBtn.style.display="inline-block";
-      lockDiv.style.display="block";
-      await enableWakeLock();
-      info.textContent="Nagrywanie… mów cyfry po 2.";
+    async function enableWakeLock(){try{wakeLock=await navigator.wakeLock.request("screen");}catch(e){console.log("WakeLock error",e);}}
+    function disableWakeLock(){if(wakeLock){wakeLock.release();wakeLock=null;}}
+
+    toggleBtn.onclick=async ()=>{
+        if(!listening){
+            recognition.start();
+            listening=true;
+            toggleBtn.style.display="none";
+            unlockBtn.style.display="inline-block";
+            lockDiv.style.display="block";
+            await enableWakeLock();
+            info.textContent="Nagrywanie… mów cyfry po 2";
+        }
+    };
+
+    unlockBtn.onclick=()=>{
+        recognition.stop();
+        listening=false;
+        toggleBtn.style.display="inline-block";
+        unlockBtn.style.display="none";
+        lockDiv.style.display="none";
+        disableWakeLock();
+        info.textContent="Nagrywanie zatrzymane.";
+    };
+
+    function speakDigits(digits){
+        if('speechSynthesis' in window && digits.length>0){
+            let str=digits.join(' ');
+            const utter=new SpeechSynthesisUtterance(str);
+            window.speechSynthesis.speak(utter);
+        }
     }
-  };
 
-  unlockBtn.onclick=()=>{
-    recognition.stop();
-    listening=false;
-    toggleBtn.style.display="inline-block";
-    unlockBtn.style.display="none";
-    lockDiv.style.display="none";
-    disableWakeLock();
-    info.textContent="Nagrywanie zatrzymane.";
-  };
-
-  function speakFeedback(text){if('speechSynthesis' in window){const u=new SpeechSynthesisUtterance(text);window.speechSynthesis.speak(u);}}
-
-  function addDigits(digits){
-    for(let i=0;i<digits.length;i+=4){
-      const chunk=digits.slice(i,i+4);
-      while(chunk.length<4) chunk.push("-");
-      const row=table.insertRow();
-      row.insertCell().textContent=counter++;
-      row.insertCell().textContent=chunk.join("");
-      row.classList.add("new-row");
-      setTimeout(()=>row.classList.remove("new-row"),1000);
-      info.textContent="Zapisano numer: "+chunk.join("");
-      speakFeedback("Zapisano numer: "+chunk.join(""));
+    function addDigits(digits){
+        for(let i=0;i<digits.length;i+=4){
+            const chunk=digits.slice(i,i+4);
+            while(chunk.length<4) chunk.push("-");
+            const row=table.insertRow();
+            row.insertCell().textContent=counter++;
+            row.insertCell().textContent=chunk.join('');
+            row.classList.add("new-row");
+            setTimeout(()=>row.classList.remove("new-row"),1000);
+        }
+        speakDigits(digits);
     }
-  }
 
-  recognition.onresult=(event)=>{
-    const text=event.results[0][0].transcript.trim();
-    console.log("Rozpoznano:",text);
-    const digits=text.replace(/\D/g,'').split('');
-    console.log("Wyciągnięte cyfry:",digits);
-    if(digits.length===0){info.textContent="Brak cyfr – powtórz nagranie";speakFeedback("Brak cyfr, powtórz nagranie");}
-    else addDigits(digits);
-  };
+    recognition.onresult=(event)=>{
+        const text=event.results[event.resultIndex][0].transcript.trim();
+        console.log("Rozpoznano:",text);
+        const digits=text.replace(/\D/g,'').split('');
+        console.log("Wyciągnięte cyfry:",digits);
+        if(digits.length>0) addDigits(digits);
+        else info.textContent="Brak cyfr – powtórz nagranie";
+    };
 
-  recognition.onerror=(e)=>{info.textContent="Błąd: "+e.error; console.log("Błąd:",e.error);};
+    recognition.onerror=(e)=>{info.textContent="Błąd: "+e.error; console.log("Błąd:",e.error);};
 
-  recognition.onend=()=>{
-    if(listening) setTimeout(startRecognition,200); // restart krótkiej frazy mobilnie
-  };
-
-  function startRecognition(){recognition.start();}
+    recognition.onend=()=>{
+        if(listening){
+            setTimeout(()=>recognition.start(), isMobile?200:0);
+        }
+    };
 }
 </script>
 
 </body>
 </html>
-44444
+6666
