--- a/mowa.html
+++ b/mowa.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nasłuchiwanie cyfr po 2</title>
+<title>Nasłuchiwanie cyfr uniwersalne</title>
 <style>
 body{font-family:Arial;padding:20px;}
 button{font-size:18px;padding:12px 20px;margin-top:10px;z-index:1001;position:relative;}
@@ -17,10 +17,10 @@ th,td{border:1px solid #000;padding:10px;font-size:22px;text-align:center;}
 </head>
 <body>
 
-<h2>Nasłuchiwanie cyfr po 2</h2>
+<h2>Nasłuchiwanie cyfr uniwersalne</h2>
 <button id="toggle">🎙 START</button>
 <button id="unlock" style="display:none;">⛔ STOP</button>
-<p id="info">Kliknij START aby rozpocząć nagrywanie.</p>
+<p id="info">Kliknij START, aby rozpocząć nagrywanie i powiedz cyfry po dwie.</p>
 
 <div id="lock"><span>Ekran zablokowany – nagrywanie aktywne</span></div>
 
@@ -46,7 +46,7 @@ if(!SpeechRecognition){
     recognition.lang="pl-PL";
     recognition.interimResults=false;
 
-    // Desktop: continuous = true, Mobilnie: false
+    // Desktop = continuous, Mobilnie = false
     const isMobile=/iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
     recognition.continuous=!isMobile;
 
@@ -61,7 +61,7 @@ if(!SpeechRecognition){
             unlockBtn.style.display="inline-block";
             lockDiv.style.display="block";
             await enableWakeLock();
-            info.textContent="Nagrywanie… mów cyfry po 2";
+            info.textContent="Nagrywanie… powiedz cyfry po dwie (np. 'jedenaście dwadzieścia trzy')";
         }
     };
 
@@ -75,46 +75,57 @@ if(!SpeechRecognition){
         info.textContent="Nagrywanie zatrzymane.";
     };
 
-    function speakDigits(digits){
-        if('speechSynthesis' in window && digits.length>0){
-            let str=digits.join(' ');
-            const utter=new SpeechSynthesisUtterance(str);
-            window.speechSynthesis.speak(utter);
+    // zamiana słów na cyfry (proste mapowanie dla 0-20,30,40,...90)
+    const wordToDigit={
+        "zero":"0","jeden":"1","dwa":"2","trzy":"3","cztery":"4","pięć":"5","piec":"5","sześć":"6","szesc":"6","siedem":"7","osiem":"8","dziewięć":"9",
+        "dziesięć":"10","jedenaście":"11","dwanaście":"12","trzynaście":"13","czternaście":"14","piętnaście":"15","pietnascie":"15",
+        "szesnaście":"16","szesnascie":"16","siedemnaście":"17","osiemnaście":"18","dziewiętnaście":"19","dziewietnascie":"19",
+        "dwadzieścia":"20","trzydzieści":"30","czterdzieści":"40","pięćdziesiąt":"50","piecdziesiat":"50","sześćdziesiąt":"60","szescdziesiat":"60","siedemdziesiąt":"70",
+        "osiemdziesiąt":"80","dziewięćdziesiąt":"90","dziewiecdziesiat":"90"
+    };
+
+    function wordsToDigits(text){
+        const words=text.toLowerCase().split(/\s+/);
+        const digits=[];
+        for(let w of words){
+            if(wordToDigit[w]) digits.push(wordToDigit[w]);
         }
+        return digits;
     }
 
     function addDigits(digits){
-        for(let i=0;i<digits.length;i+=4){
-            const chunk=digits.slice(i,i+4);
-            while(chunk.length<4) chunk.push("-");
-            const row=table.insertRow();
-            row.insertCell().textContent=counter++;
-            row.insertCell().textContent=chunk.join('');
-            row.classList.add("new-row");
-            setTimeout(()=>row.classList.remove("new-row"),1000);
+        if(digits.length===0){info.textContent="Nie rozpoznano cyfr, powtórz nagranie"; return;}
+        let combined=digits.join('');
+        while(combined.length<4) combined+="-";
+        const row=table.insertRow();
+        row.insertCell().textContent=counter++;
+        row.insertCell().textContent=combined;
+        row.classList.add("new-row");
+        setTimeout(()=>row.classList.remove("new-row"),1000);
+        info.textContent="Dodano numer: "+combined;
+        // feedback głosowy: wypowiada same cyfry
+        if('speechSynthesis' in window){
+            let speakStr=digits.join(' ');
+            window.speechSynthesis.speak(new SpeechSynthesisUtterance(speakStr));
         }
-        speakDigits(digits);
     }
 
     recognition.onresult=(event)=>{
-        const text=event.results[event.resultIndex][0].transcript.trim();
-        console.log("Rozpoznano:",text);
-        const digits=text.replace(/\D/g,'').split('');
+        const text=event.results[0][0].transcript.trim();
+        console.log("Rozpoznano frazę:",text);
+        const digits=wordsToDigits(text);
         console.log("Wyciągnięte cyfry:",digits);
-        if(digits.length>0) addDigits(digits);
-        else info.textContent="Brak cyfr – powtórz nagranie";
+        addDigits(digits);
     };
 
     recognition.onerror=(e)=>{info.textContent="Błąd: "+e.error; console.log("Błąd:",e.error);};
 
     recognition.onend=()=>{
-        if(listening){
-            setTimeout(()=>recognition.start(), isMobile?200:0);
-        }
+        if(listening) setTimeout(()=>recognition.start(), isMobile?300:0);
     };
 }
 </script>
 
 </body>
 </html>
-6666
+77777
